# coronet

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
include/coronet/: coronet.hpp
include/coronet/detail/: allocator.hpp  concepts.hpp  noop_coroutine.hpp  utility.hpp
scratch/: CMakeLists.txt  scratch.cpp
